Bug 321907 - Missing "DHCP, address only" settings
Summary: Missing "DHCP, address only" settings
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_networkmanagement (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Lukáš Tinkl
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-07-03 14:37 UTC by nucleo
Modified: 2024-12-23 18:27 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description nucleo 2013-07-03 14:37:34 UTC
"DHCP, address only" was available  in networkmanagement applet settings but missing in plasma-nm.

Reproducible: Always
Comment 1 Jan Grulich 2013-07-11 15:18:11 UTC
Git commit 18308c32d01582049e8db41bc08c44eb6b325e67 by Jan Grulich.
Committed on 11/07/2013 at 14:02.
Pushed by grulich into branch 'master'.

Add option (Automatic - only addresses) to IPv4/IPv6 setting

Use enum for better manipulation with indexes

M  +65   -8    lib/editor/ipv4widget.cpp
M  +3    -2    lib/editor/ipv4widget.h
M  +65   -8    lib/editor/ipv6widget.cpp
M  +3    -2    lib/editor/ipv6widget.h
M  +6    -1    lib/editor/ui/ipv4.ui
M  +6    -1    lib/editor/ui/ipv6.ui

http://commits.kde.org/plasma-nm/18308c32d01582049e8db41bc08c44eb6b325e67