Add option (Automatic - only addresses) to IPv4/IPv6 setting

Use enum for better manipulation with indexes
BUG:321907