lib/editor/ipv4widget.h
@@ -36,9 +36,10 @@ class IPv4Widget;
 
 class KDE_EXPORT IPv4Widget : public SettingWidget
 {
-    Q_OBJECT
-
+Q_OBJECT
 public:
+    enum MethodIndex { Automatic = 0, AutomaticOnlyIP, LinkLocal, Manual, Shared, Disabled };
+
     explicit IPv4Widget(const NetworkManager::Setting::Ptr &setting = NetworkManager::Setting::Ptr(), QWidget* parent = 0, Qt::WindowFlags f = 0);
     virtual ~IPv4Widget();
 
